chore(backend,eai,frontend): implement small improvements (#1558)